# AI-Document-Assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: config.py  guardrails.py  knowledge.py
