[project]
name = "ai-document-assistant"
version = "0.1.0"
description = "AI document assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit==1.53.0",
  "python-dotenv==1.0.1",
  "langchain-core==0.3.83",
  "langchain-groq==0.3.8",
  "langchain-community==0.3.31",
  "langchain-chroma==0.2.6",
  "langchain-huggingface==0.3.1",
  "langchain-text-splitters==0.3.11",
  "chromadb==1.4.1",
  "sentence-transformers==5.2.0",
  "requests>=2.32,<3",
  "beautifulsoup4>=4.13,<5",
  "pypdf>=6,<7",
]
